--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
   color: #fff;
   height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Lato', 'sans-serif';
   line-height: 1.5; }
   body#bg-img {
     background: url(../img/background.jpg);
@@ -117,17 +117,37 @@ body {
 h1,
 h2,
 h3 {
-  margin: 0;
+  margin-bottom: 1rem;
   font-weight: 400; }
-  h1.lg-heading,
-  h2.lg-heading,
-  h3.lg-heading {
-    font-size: 6rem; }
   h1.sm-heading,
   h2.sm-heading,
   h3.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem; }
+
+.lg-heading {
+  font-family: 'Open Sans', sans-serif;
+  color: #7e7777;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 100px;
+  font-weight: 800;
+  letter-spacing: -3px;
+  line-height: 1;
+  text-shadow: #ededed 3px 2px 0;
+  position: relative; }
+  .lg-heading:after {
+    content: '';
+    position: absolute;
+    left: 8px;
+    top: 32px;
+    background-image: linear-gradient(left top, transparent 0%, transparent 25%, #555 25%, #555 50%, transparent 50%, transparent 75%, #555 75%);
+    background-size: 4px 4px;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: -5;
+    display: block;
+    text-shadow: none; }
 
 a {
   color: #fff;
@@ -172,7 +192,7 @@ main {
   .about-info .bio-image {
     grid-area: bioimage;
     margin: auto;
-    border-radius: 50%;
+    border-radius: 100px;
     border: #eece1a solid 3px; }
   .about-info .bio {
     grid-area: bio;
@@ -246,9 +266,10 @@ main {
         color: #fff; }
 
 @media screen and (max-width: 768px) {
-  main .lg-heading {
+  .lg-heading {
     line-height: 1;
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    font-size: 70px; }
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -273,16 +294,14 @@ main {
     width: 100%; }
   .about-info {
     grid-template-columns: 1fr;
-    grid-template-areas: 'bioimage ' 'bio  ' 'job1  ' 'job2 ' 'job3 '; } }
+    grid-template-areas: 'bioimage ' 'bio  ' 'job1  ' 'job2 ' 'job3 '; }
+  .projects {
+    grid-template-columns: 1fr; } }
 
 @media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh;
-    font-size: 5.8rem; }
-  .projects {
-    grid-template-columns: 1fr; }
-  #contact .lg-heading {
-    font-size: 5rem;
-    margin-left: -20px; }
+  .lg-heading {
+    font-size: 60px; }
+  #contact h1 {
+    font-size: 50px; }
   .boxes div {
     font-size: 1.6rem; } }
