--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,7 @@ main {
         color: #eece1a;
         transition: all 0.5s ease-out; }
   main#home {
+    min-height: 100vh;
     overflow: hidden; }
     main#home h1 {
       margin-top: 20vh; }
