--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .menu-btn {
   position: absolute;
-  z-index: 3;
+  z-index: 35;
   right: 35px;
   top: 35px;
   cursor: pointer;
@@ -9,7 +9,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: #000;
     transition: all 0.5s ease-out; }
   .menu-btn.close {
     transform: rotate(180deg); }
@@ -24,8 +24,8 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
-  visibility: hidden; }
+  visibility: hidden;
+  z-index: 33; }
   .menu.show {
     visibility: visible; }
   .menu-branding, .menu-nav {
@@ -40,14 +40,14 @@
   .menu-nav {
     margin: 0;
     padding: 0;
-    background: #373737;
+    background: #e2caca;
     list-style: none;
     transform: translate3d(0, -100%, 0);
     transition: all 0.5s ease-out; }
     .menu-nav.show {
       transform: translate3d(0, 0, 0); }
   .menu-branding {
-    background: #444;
+    background: #498bbb;
     transform: translate3d(0, 100%, 0);
     transition: all 0.5s ease-out; }
     .menu-branding.show {
@@ -56,15 +56,15 @@
       width: 250px;
       height: 215px;
       background: url("../img/rsz_me.jpg");
-      border-radius: 50%;
-      border: solid 3px #eece1a; }
+      border-radius: 2rem;
+      border: solid 3px #dda7a7; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
     transition: all 0.5s ease-out; }
     .menu .nav-item.show {
       transform: translate3d(0, 0, 0); }
     .menu .nav-item.current > a {
-      color: #eece1a; }
+      color: #498bbb; }
   .menu .nav-link {
     display: inline-block;
     position: relative;
@@ -72,11 +72,11 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     transition: all 0.5s ease-out; }
     .menu .nav-link:hover {
-      color: #eece1a; }
+      color: #498bbb; }
 
 .nav-item:nth-child(1) {
   transition-delay: 0.1s; }
@@ -94,8 +94,8 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #444;
-  color: #fff;
+  background-color: rgba(241, 238, 238, 0.561);
+  color: #000;
   height: 100%;
   margin: 0;
   font-family: 'Lato', 'sans-serif';
@@ -112,7 +112,7 @@ body {
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: rgba(68, 68, 68, 0.9); }
+      background: rgba(241, 238, 238, 0.9); }
 
 h1,
 h2,
@@ -150,7 +150,7 @@ h3 {
     text-shadow: none; }
 
 a {
-  color: #fff;
+  color: #000;
   text-decoration: none; }
 
 header {
@@ -159,13 +159,13 @@ header {
   width: 100%; }
 
 .text-secondary {
-  color: #eece1a; }
+  color: #498bbb; }
 
 .bio .text-secondary {
   text-decoration: underline; }
 
 .subText {
-  color: #f2d849; }
+  color: #397098; }
 
 main {
   padding: 4rem;
@@ -177,7 +177,7 @@ main {
     main .icons a {
       padding: 0.4rem; }
       main .icons a:hover {
-        color: #eece1a;
+        color: #498bbb;
         transition: all 0.5s ease-out; }
   main#home {
     min-height: 100vh;
@@ -186,34 +186,19 @@ main {
       margin-top: 20vh; }
 
 .about-info {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3'; }
-  .about-info .bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 100px;
-    border: #eece1a solid 3px; }
+  display: grid; }
   .about-info .bio {
-    grid-area: bio;
     font-size: 1.5rem; }
-  .about-info .job-1 {
-    grid-area: job1; }
-  .about-info .job-2 {
-    grid-area: job2; }
-  .about-info .job-3 {
-    grid-area: job3; }
   .about-info .job {
-    background: #515151;
+    background: rgba(253, 252, 252, 0.561);
     padding: 0.5rem;
-    border-bottom: #eece1a 5px solid; }
+    border-bottom: #498bbb 5px solid; }
 
 #main-footer {
   text-align: center;
   padding: 1rem;
-  background: #2b2b2b;
-  color: #fff;
+  background: rgba(218, 210, 210, 0.561);
+  color: #000;
   height: 60px; }
 
 .projects {
@@ -226,7 +211,7 @@ main {
     margin-top: 0.5rem; }
     .projects img:hover {
       opacity: 0.5;
-      border-color: #eece1a;
+      border-color: #498bbb;
       transition: all 0.5s ease-out; }
 
 .btn, .btn-dark, .btn-light {
@@ -236,15 +221,15 @@ main {
   border: 0;
   margin-bottom: 0.3rem; }
   .btn:hover, .btn-dark:hover, .btn-light:hover {
-    background: #eece1a;
+    background: #498bbb;
     color: #000; }
 
 .btn-dark {
-  background: black;
+  background: rgba(123, 101, 101, 0.561);
   color: #fff; }
 
 .btn-light {
-  background: #c4c4c4;
+  background: rgba(255, 255, 255, 0.561);
   color: #333; }
 
 .boxes {
@@ -261,7 +246,7 @@ main {
     transition: all 0.5s ease-out; }
     .boxes div:hover {
       padding: 0.5rem 1.5rem;
-      background: #eece1a;
+      background: #498bbb;
       color: #000; }
       .boxes div:hover span {
         color: #fff; }
