--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color: rgba(241, 238, 238, 0.561);
+  background-color: rgba(207, 198, 198, 0.438);
   color: #000;
   height: 100%;
   margin: 0;
@@ -112,7 +112,7 @@ body {
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: rgba(241, 238, 238, 0.9); }
+      background: rgba(207, 198, 198, 0.9); }
 
 h1,
 h2,
@@ -161,8 +161,14 @@ header {
 .text-secondary {
   color: #498bbb; }
 
+.bio-text {
+  font-size: 2rem;
+  padding: 2rem 1rem; }
+
 .bio .text-secondary {
-  text-decoration: underline; }
+  font-size: 3rem;
+  color: #7e7777;
+  font-weight: 700; }
 
 .subText {
   color: #397098; }
@@ -189,30 +195,33 @@ main {
   display: grid; }
   .about-info .bio {
     font-size: 1.5rem; }
+    .about-info .bio img {
+      max-height: 9rem;
+      padding: 1rem;
+      transition: all 0.6s; }
+      .about-info .bio img:hover {
+        transform: translateY(-1rem); }
   .about-info .job {
-    background: rgba(253, 252, 252, 0.561);
+    background: rgba(219, 212, 212, 0.438);
     padding: 0.5rem;
     border-bottom: #498bbb 5px solid; }
-
-#main-footer {
-  text-align: center;
-  padding: 1rem;
-  background: rgba(218, 210, 210, 0.561);
-  color: #000;
-  height: 60px; }
 
 .projects {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(2, 1fr); }
+  .projects .item {
+    border-radius: 2rem;
+    background-color: #e6d7d7; }
   .projects img {
     width: 80%;
     border: 3px solid #fff;
-    margin-top: 0.5rem; }
+    margin-top: 0.5rem;
+    transition: all 0.4s;
+    border-radius: 0.5rem; }
     .projects img:hover {
-      opacity: 0.5;
-      border-color: #498bbb;
-      transition: all 0.5s ease-out; }
+      transform: translateY(-0.5rem);
+      box-shadow: 2px 9px 13px 1px rgba(0, 0, 0, 0.75); }
 
 .btn, .btn-dark, .btn-light {
   display: inline-block;
@@ -225,11 +234,11 @@ main {
     color: #000; }
 
 .btn-dark {
-  background: rgba(123, 101, 101, 0.561);
+  background: rgba(81, 69, 69, 0.438);
   color: #fff; }
 
 .btn-light {
-  background: rgba(255, 255, 255, 0.561);
+  background: rgba(255, 255, 255, 0.438);
   color: #333; }
 
 .boxes {
